@@ -9,6 +9,7 @@
     - Silences are now also printed in tablature mode; makes them easier to follow
     - Many other readability improvements to tablature printing
     - Better printing of time signature changes
+    - Connect grand staffs toghether (extend measure bars)
     - Misc tweaks and fixes
 - Adding and removing tracks no more confuse the undo system
 - The "undo" menu is now chattier about what is next to undo
